chore:fix button display issue to proper align well

--- a/brick_breaker/css/menu.css
+++ b/brick_breaker/css/menu.css
@@ -1,10 +1,7 @@
 
 /* Pause Menu Styles */
-.hide{
-    display: block;
-}
-
 #pause-menu {
+    flex-direction: column;
     position: fixed;
     top: 50%;
     left: 50%;
